--- a/.babelrc
+++ b/.babelrc
@@ -27,6 +27,10 @@
                 "loose": true
             }
         ]
+         ,
+         [
+             "transform-remove-console"
+         ]
 
     ]
 }
